# disk-hog-backup

./: .editorconfig  .gitignore  .tool-versions  AGENTS.md  Cargo.toml  README.md  ci-tool-setup.sh  deny.toml  diskhog.go  diskhog_test.go  go.mod  go.sum  lint.sh  make-ramdisk.sh  run-cliff-preview.sh  run-cliff.sh  test-auto-delete.sh  test.sh
.devcontainer/: devcontainer.json
.github/: cliff.toml  dependabot.yml
.github/workflows/: _ci.yml  _release.yml  build-branches.yml  build-main.yml  go.yml  workflow.yml
backup/: backup.go  backup_test.go
backup_sets/: backup_set.go  backup_set_test.go  set_namer.go  set_namer_test.go  time.go
dhcopy/: copy_file.go  copy_file_test.go  copy_folder.go  copy_folder_test.go
doc/: development.md  threading.md
doc/adr/: 0001-streaming-copy-and-md5.md  0002-performance-benchmarking-strategy.md  0003-use-sysinfo-crate-for-disk-space.md  0004-automatic-space-management-and-testing-strategy.md  0005-sparse-file-preservation.md
hard_linker/: hard_linker.go  hard_linker_test.go
src/: backup.rs  disk_space.rs  diskhog.go  lib.rs  main.rs
src/backup/: backup.go.go  backup.rs
src/backup_sets/: backup_set.rs  backup_set_test.go  backup_stats.rs  md5_store.rs  mod.rs  set_manager.rs  set_namer.rs
src/dhcopy/: copy_file.go  copy_file.rs  copy_folder.rs  copy_folder_test.go  file_hash.rs  ignore_patterns.rs  mod.rs  streaming_copy.rs
src/test_helpers/: mod.rs  test_helpers.rs
supply-chain/: config.toml
test_helpers/: test_helpers.go
tests/: backup_e2e.rs  end_to_end_tests.rs
tests/common/: mod.rs
