[package]
name = "disk-hog-backup"
version = "0.0.0-git"
edition = "2024"
license = "AGPL-3.0"
repository = "https://github.com/timabell/disk-hog-backup"
description = "A tool for backing up to external disk, making best use of the available space "

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.45", features = ["derive"] }
crossbeam = "0.8.4"
filetime = "0.2.26"
md5 = "0.8.0"
rand = "0.9.2"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.21.0"
