[package]
name = "disk-hog-backup"
version = "0.0.0-git"
edition = "2024"
license = "AGPL-3.0"
repository = "https://github.com/timabell/disk-hog-backup"
description = "A tool for backing up to external disk, making best use of the available space "

[dependencies]
bytesize = "2.1"
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive"] }
crossbeam = "0.8.4"
filetime = "0.2.26"
md5 = "0.8.0"
rand = "0.9.2"
sysinfo = "0.37"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
rand_chacha = "0.9"
regex = "1"
tempfile = "3.23.0"
