[package]
name = "disk-hog-backup"
version = "0.0.0-git"
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/timabell/disk-hog-backup"
description = "A tool for backing up to external disk, making best use of the available space "

[dependencies]
bytesize = "2.3"
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
crossbeam = "0.8.4"
filetime = "0.2.27"
md5 = "0.8.0"
rand = "0.10.0"
sysinfo = "0.38"

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
rand_chacha = "0.10"
regex = "1"
tempfile = "3.27.0"
